# a-hex-befalls-the-hexagons

./: Cargo.toml  README.md  Trunk.toml  flake.nix  hours.txt  justfile  package.nix
assets/sprites_raw/: BaseHexagon.ase  Goblin.ase  Ogre.ase  Priestess.ase  RefreshIcon.aseprite  Skeleton.ase  Warrior.ase  buttons.ase  map_tiles.ase  theif.ase  title.ase  unknown-jim.ase
src/: animation.rs  camera.rs  controls.rs  generate_map.rs  health_bar.rs  items.rs  main.rs  room.rs  saving.rs  sky.rs  spawn_map.rs  style.rs  util.rs
src/actor/: attack.rs  health.rs  mod.rs
src/database/: mod.rs  sqlite_backend.rs  stub_backend.rs
src/game/: attack_options.rs  combat.rs  mod.rs  pouch.rs
src/menu/: controls.rs  load_game.rs  mod.rs  new_game.rs
src/tile/: mod.rs  picking_backend.rs
